--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Puxuan</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <link rel="stylesheet" href="foundation.min.css">
+    <script src="jquery-3.1.1.min.js"></script>
+    <script src="underscore-min.js"></script>
   </head>
   <body style="background-color: #f9f9f9">
-    <div id="root"></div>
+    <div id="cover" class='main-box bg-image'></div>
+    <div class="page-body">
+      <header id="nav"></header>
+      <main>
+        <section class="main-box" id="contacts"></section>
+        <hr/>
+        <section class="main-box" id="experiences"></section>
+        <hr/>
+        <section class="main-box" id="skills"></section>
+        <hr/>
+        <section class="main-box" id="educations"></section>
+        <hr/>
+        <section class="main-box" id="projects"></section>
+      </main>
+    </div>
     <script src="build.js"></script>
   </body>
 </html>
