add post require function

--- a/index.html
+++ b/index.html
@@ -26,8 +26,23 @@
       <main class="mdl-layout__content">
         <div class="demo-blog__posts mdl-grid">
           <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
-            <div class="mdl-card__media mdl-color-text--grey-50">
-              <h3><a href="blog1.html"> Use Class properties in your react project</a></h3>
+            <div class="mdl-card__media mdl-color-text--grey-50 require-js">
+              <h3><a href="new-form-of-require.html">New form of require function using es6 feature</a></h3>
+            </div>
+            <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
+              Because es6 introduces lazy evaluated expression so the expression won't be evaluated until it is actually required...
+            </div>
+            <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
+              <div class="minilogo"></div>
+              <div>
+                <strong>The Newist</strong>
+                <span>01/14/2017</span>
+              </div>
+            </div>
+          </div>
+          <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__media mdl-color-text--grey-50 start-react">
+              <h3><a href="class-properties-and-react.html">Use Class properties in your react project</a></h3>
             </div>
             <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
               ReactJs is a rather popular Javascript framework to build UI. Everything looks wonderful until I start to attach callback functions to a button or a link...
@@ -35,11 +50,11 @@
             <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
               <div class="minilogo"></div>
               <div>
-                <strong>The Newist</strong>
-                <span>01/13/2017</span>
+                <span>01/10/2017</span>
               </div>
             </div>
           </div>
+
         </div>
       </main>
       <div class="mdl-layout__obfuscator"></div>
